KG-Feat--thesis and convocation

--- a/src/app/pages/new-attestation/new-attestation.component.html
+++ b/src/app/pages/new-attestation/new-attestation.component.html
@@ -61,7 +61,7 @@
             </section>
             <section class="example-section">
               <br>
-                <label>Are you a Phd student?</label><br>
+                <label>Do you want to attest your Phd Documents?</label><br>
             
 
                 <mat-radio-group (change)="onChange($event)" formControlName="phd" aria-label="Are you a Phd student?">
