--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -101,7 +101,7 @@ h5 {
   overflow: hidden;
 }
 
-.number select {
+.number mat-select {
   width: 17%;
   background-color: #ffffff00;
   position: absolute;
@@ -149,6 +149,14 @@ button {
     margin-top: 0;
     padding: 10px;
   }
+
+  .mcr2 {
+    height: 100vh;
+    width: 100vw;
+    border-radius: 0;
+    margin-top: 0;
+    padding: 10px;
+}
 
   .bac {
     display: none;
@@ -363,4 +371,43 @@ button {
   border-radius: 8px;
   padding-left: 3%;
   border: 1px black solid;
+}
+
+
+.captcha-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  height: 100vh;
+}
+
+.mcr2 {
+  position: relative;
+  height: 60vh;
+  width: 60vw;
+  background-color: #ffffff;
+  margin: auto;
+  overflow-y: scroll;
+  padding: 3% 5%;
+  box-shadow: rgba(0, 0, 0, 0.944) 0px 25px 50px -12px;
+}
+
+.mcr2::-webkit-scrollbar {
+  display: none;
+}
+
+.mcr2 {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.disabled-section {
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+.hide {
+  display: none;
 }
