--- a/src/app/pages/new-attestation/new-attestation.component.html
+++ b/src/app/pages/new-attestation/new-attestation.component.html
@@ -1,111 +1,119 @@
-
-<mat-card >
+<mat-card>
   <div>
-  <mat-stepper (click)="checktabs(stepper.selectedIndex)"  orientation="horizontal" [linear]="true" #stepper  >
-    <mat-step [stepControl]="firstForm" [completed]="tabcheck1">
-      <ng-template matStepLabel >1st Steps</ng-template> 
-      <div class="card">
-        <h3 class="card-header" style="font-weight: bold;background: #06d8f8;">Educational Details</h3>
-        <div class="card-body"> 
-          <div class="step"> 
-            <form [formGroup]="firstForm">
-            <section class="example-section">
-              <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="educationalDetails" [(ngModel)]="educationalDetails" (change)="onChange($event)">
-                  Educational Details (select this option for attestation of marksheets, transcripts & Convocation
-                  Certificate)
-                </mat-checkbox>
-                </span>
-            </section>
-            <section class="example-section">
-              <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="instructionalDetails" [(ngModel)]="instructionalDetails" (change)="onChange($event)">
-                  Medium of Instruction (In case you want letter(language) of medium of instructions eg: English,Hindi etc)
-                </mat-checkbox>
-              </span>
-            </section>
-            <section class="example-section">
-              <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="curriculumDetails" [(ngModel)]="curriculumDetails" (change)="onChange($event)">
-                  Curriculum (Incase you want the subjects to be attested. Curriculum is issued by the college)
-                </mat-checkbox>
-              </span>
-            </section>
-            <section class="example-section">
-              <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="gradToPer" [(ngModel)]="gradToPer" (change)="onChange($event)">
-                  Grade to Percentage Letter
-                </mat-checkbox>
-              </span>
-            </section>
-            <section class="example-section">
-              <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="affiliation" [(ngModel)]="affiliation" (change)="onChange($event)">
-                  Affiliation Letter
-                </mat-checkbox>
-              </span>
-            </section>
-            <section class="example-section">
-              <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="CompetencyLetter" [(ngModel)]="CompetencyLetter" (change)="onChange($event)">
-                  Certificate of Competency letter (For Master of Foreign-Going Ship Examination ONLY)
-                </mat-checkbox>
-              </span>
-            </section>
-            <section class="example-section">
-              <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="LetterforNameChange" [(ngModel)]="LetterforNameChange" (change)="onChange($event)">
-                  Letter For Name Change (A Letter stating mothers name on marksheet and not on passport.)
-                </mat-checkbox>
-              </span>
-            </section>
-            <section class="example-section">
-              <br>
-                <label>Do you want to attest your Phd Documents?</label><br>
-            
+    <mat-stepper (click)="checktabs(stepper.selectedIndex)" orientation="horizontal" [linear]="true" #stepper>
+      <mat-step [stepControl]="firstForm" [completed]="tabcheck1">
+        <ng-template matStepLabel>1st Steps</ng-template>
+        <div class="card">
+          <h3 class="card-header" style="font-weight: bold;background: #06d8f8;">Educational Details</h3>
+          <div class="card-body">
+            <div class="step">
+              <form [formGroup]="firstForm">
+                <section class="example-section">
+                  <span class="example-list-section">
+                    <mat-checkbox class="example-margin" formControlName="educationalDetails"
+                      [(ngModel)]="educationalDetails" (change)="onChange($event)">
+                      Educational Details (select this option for attestation of marksheets, transcripts & Convocation
+                      Certificate)
+                    </mat-checkbox>
+                  </span>
+                </section>
+                <section class="example-section">
+                  <span class="example-list-section">
+                    <mat-checkbox class="example-margin" formControlName="instructionalDetails"
+                      [(ngModel)]="instructionalDetails" (change)="onChange($event)">
+                      Medium of Instruction (In case you want letter(language) of medium of instructions eg:
+                      English,Hindi etc)
+                    </mat-checkbox>
+                  </span>
+                </section>
+                <section class="example-section">
+                  <span class="example-list-section">
+                    <mat-checkbox class="example-margin" formControlName="curriculumDetails"
+                      [(ngModel)]="curriculumDetails" (change)="onChange($event)">
+                      Curriculum (Incase you want the subjects to be attested. Curriculum is issued by the college)
+                    </mat-checkbox>
+                  </span>
+                </section>
+                <section class="example-section">
+                  <span class="example-list-section">
+                    <mat-checkbox class="example-margin" formControlName="gradToPer" [(ngModel)]="gradToPer"
+                      (change)="onChange($event)">
+                      Grade to Percentage Letter
+                    </mat-checkbox>
+                  </span>
+                </section>
+                <section class="example-section">
+                  <span class="example-list-section">
+                    <mat-checkbox class="example-margin" formControlName="affiliation" [(ngModel)]="affiliation"
+                      (change)="onChange($event)">
+                      Affiliation Letter
+                    </mat-checkbox>
+                  </span>
+                </section>
+                <section class="example-section">
+                  <span class="example-list-section">
+                    <mat-checkbox class="example-margin" formControlName="CompetencyLetter"
+                      [(ngModel)]="CompetencyLetter" (change)="onChange($event)">
+                      Certificate of Competency letter (For Master of Foreign-Going Ship Examination ONLY)
+                    </mat-checkbox>
+                  </span>
+                </section>
+                <section class="example-section">
+                  <span class="example-list-section">
+                    <mat-checkbox class="example-margin" formControlName="LetterforNameChange"
+                      [(ngModel)]="LetterforNameChange" (change)="onChange($event)">
+                      Letter For Name Change (A Letter stating mothers name on marksheet and not on passport.)
+                    </mat-checkbox>
+                  </span>
+                </section>
+                <section class="example-section">
+                  <br>
+                  <label>Do you want to attest your Phd Documents?<span
+                      style="color: red;font-size: 25px;">*</span></label>
+                  <br>
+                  <mat-radio-group (change)="onChange($event)" formControlName="phd"
+                    aria-label="Are you a Phd student?">
+                    <mat-radio-button [checked]="phd == false" value="false">No</mat-radio-button>
+                    <mat-radio-button [checked]="phd == true" value="true">yes</mat-radio-button>
+                  </mat-radio-group>
 
-                <mat-radio-group (change)="onChange($event)" formControlName="phd" aria-label="Are you a Phd student?">
-                  <mat-radio-button  [checked]="phd == false" value="false">No</mat-radio-button>
-                  <mat-radio-button  [checked]="phd == true" value="true">yes</mat-radio-button>
-              </mat-radio-group>
 
+                </section>
 
-            </section>
-
-            <br>
-            <button mat-button matStepperNext class="next-custom-button" *ngIf="showButton" (click)="eduDetails();nextStep()">Next</button>
-          </form>
+                <br>
+                <button mat-button matStepperNext class="next-custom-button" *ngIf="showButton"
+                  (click)="eduDetails();nextStep()">Next</button>
+              </form>
+            </div>
+            <div class="help">
+              <br />
+              <br />
+              <span style="color :red; font-size: 20px;">Need Help in Attestation Process?</span><br />
+              <span style="color:red; text-align:center;">Click Here</span><br />
+              <br />
+              <a href=" " target="_blank"><img src=" " width="150px;" height="100px;"></a>
+            </div>
           </div>
-          <div class="help">
-            <br/>
-            <br/>
-            <span style="color :red; font-size: 20px;">Need Help in Attestation Process?</span><br/>
-            <span style="color:red; text-align:center;">Click Here</span><br/>
-            <br/>
-            <a href=" " target="_blank"><img src=" " width="150px;" height="100px;"></a>
-          </div>
-        </div> 
-      </div>   
-    </mat-step>
-    <mat-step [completed]="tabcheck2">
-      <ng-template matStepLabel>2nd Steps
-      </ng-template> 
-      <app-upload-document></app-upload-document>
-     <br>
-      <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
-      <button mat-button matStepperNext class="next-custom-button">Next</button>
-    </mat-step>
-    <mat-step [completed]="tabcheck3">
-      <ng-template matStepLabel>3rd Steps</ng-template>
-      <app-purpose></app-purpose>
-      <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
-      <button mat-button matStepperNext class="next-custom-button">Next</button>
-    </mat-step>
-    <!-- <mat-step>
+        </div>
+      </mat-step>
+      <mat-step [completed]="tabcheck2">
+        <ng-template matStepLabel>2nd Steps
+        </ng-template>
+        <app-upload-document></app-upload-document>
+        <br>
+        <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
+        <button mat-button matStepperNext class="next-custom-button">Next</button>
+      </mat-step>
+      <mat-step [completed]="tabcheck3">
+        <ng-template matStepLabel>3rd Steps</ng-template>
+        <app-purpose></app-purpose>
+        <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
+        <button mat-button matStepperNext class="next-custom-button">Next</button>
+      </mat-step>
+      <!-- <mat-step>
       <ng-template matStepLabel>4th Steps</ng-template>
       <button mat-button matStepperPrevious class="previous-custom-button">Back</button>
     </mat-step>  -->
-  </mat-stepper>
-</div>
-</mat-card>     
-
+    </mat-stepper>
+  </div>
+</mat-card>
