--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -51,20 +51,15 @@
                     <div style="width: 45%;">
                         <h6 for="input-password">Password:</h6>
                         <div style="position: relative; width: 100%;">
-                            <input class="form-control" type="password" id="passWord" placeholder="Enter Password" [type]="showPassword ? 'text' : 'passWord'"
-                                formControlName="passwordCtrl"
+                            <input class="form-control" type="password" id="passWord" placeholder="Enter Password"
+                                [type]="showPassword ? 'text' : 'passWord'" formControlName="passwordCtrl"
                                 [ngClass]="{ 'is-invalid': submitted && f['passwordCtrl'].errors }">
                             <div class="eye">
-                                <i alt="show" class="far fa-eye eye-show" 
-                                (click)="showPassword = !showPassword"
-                                [class.hide]="showPassword"></i>
-                                <i alt="hide" class="far fa-eye-slash eye-hide" 
-                                (click)="showPassword = !showPassword"
-                                [class.hide]="!showPassword"></i>
+                                <i alt="show" class="far fa-eye eye-show" (click)="showPassword = !showPassword"
+                                    [class.hide]="showPassword"></i>
+                                <i alt="hide" class="far fa-eye-slash eye-hide" (click)="showPassword = !showPassword"
+                                    [class.hide]="!showPassword"></i>
                             </div>
-                            <!-- <p-password [style]="{'width':'100%', 'height':'40px'}" [toggleMask]="true"
-                                formControlName="passwordCtrl" [feedback]="false" placeholder="Type Password"
-                                [ngClass]="{ 'is-invalid': submitted && f['passwordCtrl'].errors }"></p-password> -->
                             <div *ngIf="(f['passwordCtrl'].invalid || f['passwordCtrl'].touched) && (f['passwordCtrl'].touched || submitted)"
                                 class="invalid-feedback">
                                 <div
@@ -83,19 +78,17 @@
                     <div style="width: 45%;">
                         <h6 for="input-re-password">Confirm Password:</h6>
                         <div style="position: relative; width: 100%;">
-                            <input class="form-control" type="password" id="passWord" placeholder="Enter Password" [type]="showConfmPassword ? 'text' : 'passWord'"
-                                formControlName="confmPasswordCtrl"
+                            <input class="form-control" type="password" id="passWord" placeholder="Enter Password"
+                                [type]="showConfmPassword ? 'text' : 'passWord'" formControlName="confmPasswordCtrl"
                                 [ngClass]="{ 'is-invalid': submitted && f['confmPasswordCtrl'].errors }">
                             <div class="eye">
-                                <i alt="show" class="far fa-eye eye-show" (click)="showConfmPassword = !showConfmPassword"
+                                <i alt="show" class="far fa-eye eye-show"
+                                    (click)="showConfmPassword = !showConfmPassword"
                                     [class.hide]="showConfmPassword"></i>
-                                <i alt="hide" class="far fa-eye-slash eye-hide" (click)="showConfmPassword = !showConfmPassword"
+                                <i alt="hide" class="far fa-eye-slash eye-hide"
+                                    (click)="showConfmPassword = !showConfmPassword"
                                     [class.hide]="!showConfmPassword"></i>
                             </div>
-                            <!-- <p-password [style]="{'width':'100%', 'height':'40px'}" formControlName="confmPasswordCtrl"
-                                [feedback]="false" placeholder="Re-Type Password"
-                                [ngClass]="{ 'is-invalid': submitted && f['confmPasswordCtrl'].errors }"
-                                [toggleMask]="true"></p-password> -->
                         </div>
                         <div *ngIf="submitted && f['confmPasswordCtrl'].errors"
                             style="font-size: 13px; color: #de5555;">
@@ -127,7 +120,7 @@
                         <mat-option id="mat" *ngFor="let country of countriesList"
                             value="{{country.phonecode}}">{{country.name}} (+{{ country.phonecode }})</mat-option>
                     </mat-select>
-                    <input type="number" formControlName="mobileNoCtrl"
+                    <input type="number" formControlName="mobileNoCtrl" placeholder="Enter Mobile Number"
                         [ngClass]="{'is-invalid': registerForm.get('mobileNoCtrl')?.invalid && (registerForm.get('mobileNoCtrl')?.dirty || registerForm.get('mobileNoCtrl')?.touched)}">
                 </div>
                 <br><br>
@@ -135,8 +128,9 @@
                     <div class="captcha-div">{{captchaUrl}}</div>
                     <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/60/refresh--v1.png"
                         alt="refresh--v1" (click)="getCaptcha()" />
-                    <input type="text" formControlName="captchaCtrl"
-                        [ngClass]="{'is-invalid': registerForm.get('captchaCtrl')?.invalid && (registerForm.get('captchaCtrl')?.dirty || registerForm.get('captchaCtrl')?.touched)}">
+                    <input type="text" formControlName="captchaCtrl" placeholder="Enter Captcha"
+                        [ngClass]="{'is-invalid': registerForm.get('captchaCtrl')?.invalid && (registerForm.get('captchaCtrl')?.dirty || registerForm.get('captchaCtrl')?.touched)}"
+                        #captcha>
                 </div>
                 <br>
                 <div style="width: 100%; display: flex;justify-content: center;">
@@ -152,7 +146,7 @@
                     <section class="example-section" [ngClass]="{'disabled-section': isSectionDisabled}">
                         <span class="example-list-section">
                             <mat-checkbox class="example-margin" formControlName="instructionCtrl1"
-                                [(ngModel)]="instruction1" (onChange)="onInstructionChange($event)">
+                                [(ngModel)]="instruction1">
                                 The colleges that I am considering for application may communicate with me by
                                 mail,
                                 email, phone or text message prior to submission of my application (you can
@@ -166,7 +160,7 @@
                     <section class="example-section" [ngClass]="{'disabled-section': isSectionDisabled}">
                         <span class="example-list-section">
                             <mat-checkbox class="example-margin" formControlName="instructionCtrl2"
-                                [(ngModel)]="instruction2" (onChange)="onInstructionChange($event)">
+                                [(ngModel)]="instruction2">
                                 The Mumbai University may communicate with me by mail, email, phone or text
                                 message
                                 about my account and other information relevant to the admission application
@@ -178,8 +172,7 @@
                     <br>
                     <section class="example-section">
                         <span class="example-list-section">
-                            <mat-checkbox class="example-margin" formControlName="instructionCtrl3"
-                                (onChange)="onInstructionChange($event)">
+                            <mat-checkbox class="example-margin" formControlName="instructionCtrl3">
                                 By checking this box, I represent that (i) I am age 13 or older and (ii) I have
                                 read,
                                 understood and agreed to the terms and conditions of the Terms of Use and
@@ -197,8 +190,7 @@
                     <br>
                     <section class="example-section">
                         <span class="example-list-section">
-                            <mat-checkbox class="example-margin" formControlName="instructionCtrl4"
-                                (onChange)="onInstructionChange($event)">
+                            <mat-checkbox class="example-margin" formControlName="instructionCtrl4">
                                 I accept that (I) Fees paid is not refundable And (II) All the information
                                 filled by
                                 me
@@ -209,8 +201,7 @@
                     <br>
                     <section class="example-section">
                         <span class="example-list-section">
-                            <mat-checkbox class="example-margin" formControlName="instructionCtrl5"
-                                (onChange)="onInstructionChange($event)">
+                            <mat-checkbox class="example-margin" formControlName="instructionCtrl5">
                                 The Mumbai University website uses small files stored on your computer, known as
                                 cookies, that help us remember your settings and ensure the website works
                                 properly.
@@ -263,10 +254,12 @@
     <div style="min-width: 30vw;">
         <div class="row">
             <div class="col-md-4">
-                <p-dropdown [options]="countriesList" [(ngModel)]="countrySelect" optionLabel="name" optionValue="phonecode"></p-dropdown>
+                <p-dropdown [options]="countriesList" [(ngModel)]="countrySelect" optionLabel="name"
+                    optionValue="phonecode"></p-dropdown>
             </div>
             <div class="col-md-8">
-                <input style="width: 100%;" type="text" placeholder="Enter Mobile Number" pInputText [(ngModel)]="mobNo" />
+                <input style="width: 100%;" type="text" placeholder="Enter Mobile Number" pInputText [(ngModel)]="mobNo"
+                    #mobileNum />
             </div>
         </div>
         <br>
