new forgot password page

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,41 +1,30 @@
-<div class="center-container">
-    <p-card header="Forgot Password">
-      <div class="col-md-12">
-        <h5>Enter your email address and we'll send a link to reset your password</h5>
-      </div>
-      <div class="card">
-        <div class="m-2">
-          <form [formGroup]="forgotPassForm">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="card flex flex-wrap justify-content-center m-4">
-                  <span class="p-input-icon-left">
-                    <i class="pi pi-search"></i>
-                    <input class="p-inputtext-lg" type="text" pInputText style="width: 100%" placeholder="Enter your email address" formControlName="email" [ngClass]="{'is-invalid': email.invalid && (email.dirty || email.touched)}" />
-                  </span>
-                </div>
-              </div>
-            </div>
-          </form>
-          <div class="row">
-            <div class="col-md-12 d-flex justify-content-center m-3">
-              <button pButton pRipple label="REQUEST PASSWORD" class="p-button-success" *ngIf="forgotPassForm.valid" (click)="reqPassword()"></button>
-              <p-dialog header="Header" [style]="{width: '50vw'}">
-              </p-dialog>
-            </div>
-          </div>
-          <br>
-        </div>
-      </div>
-      <br>
+<div class="bgimg">
+  <img style="height: 100vh; width: 100vw; position: absolute; z-index: -1;" src="../../../assets/IMG/gf-01.jpg" alt="">
+  <div class="bgb">
+    <div class="mcr">
       <div class="row">
-        <div class="col-md-5">
-          <p-button label="BACK TO LOG IN" icon="pi pi-sign-out reversed-icon" (click)="logIn()"></p-button>
+        <h6 class="col-md-4">New User ? <a routerLink="/register">Register</a></h6>
+        <div class="col-md-4" style="height: 110px; overflow: hidden;">
+          <img style="height: 200px; width: 100%; margin-top: -50px;"
+            src="../../../assets/IMG/UM Logo (632 × 505 px).svg" alt="">
         </div>
-        <div class="col-md-4"></div>
-        <div class="col-md-3">
-          <p-button label="REGISTER" icon="pi pi-sign-in" iconPos="right" (click)="register()"></p-button>
-        </div>
+        <h6 style="text-align: center;" class="col-md-4">English <img
+            src="https://img.icons8.com/external-those-icons-fill-those-icons/15/external-down-arrows-those-icons-fill-those-icons-1.png"
+            alt="external-down-arrows-those-icons-fill-those-icons-1" /></h6>
       </div>
-    </p-card>
+      <h5>Enter your email address and we'll send a link to reset your password</h5>
+
+      <form class="emailinput" [formGroup]="forgotPassForm">
+        <i class="pi pi-search"></i>
+        <input type="text" placeholder="Enter your email address"
+          formControlName="email" [ngClass]="{'is-invalid': email.invalid && (email.dirty || email.touched)}" />
+      </form>
+      <div class="row">
+        <button pButton pRipple label="REQUEST PASSWORD" class="p-button-success" *ngIf="forgotPassForm.valid"
+          (click)="reqPassword()"></button>
+        <p-dialog header="Header" [style]="{width: '50vw'}">
+        </p-dialog>
+      </div>
+    </div>
+  </div>
 </div>
