--- a/src/app/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/auth/forgot-password/forgot-password.component.scss
@@ -1,16 +1,200 @@
 
-.center-container {
+/**
+ * @license
+ * Copyright Akveo. All Rights Reserved.
+ * Licensed under the MIT License. See License.txt in the project root for license information.
+ */
+
+ .form::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .form {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+  
+  .mcr::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .mcr {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+  
+  .bgimg{
+    height: 100vh;
+    width: 100vw;
+  }
+  
+  .bgb{
+    background-color: #192b51a3; 
+    height: 100%; 
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* This ensures that the container takes the full height of the viewport */
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  
+  h4, h5 {
+    text-align: center;
+  }
+  
+  .mcr {
+    position: relative;
+    height: auto;
+    width: auto;
+    background-color: #ffffff;
+    margin: auto;
+    padding: 2%;
+    box-shadow: rgba(0, 0, 0, 0.944) 0px 25px 50px -12px;
+  }
+  
+  .form {
+    height: auto;
+    overflow-y: scroll;
+    padding: 0px 30px;
+    margin: auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto 0;
+  }
+  
+  .form .label{
+    width: 100%;
+    text-align: left;
+  }
+  
+  .eye {
+    position: absolute;
+    top: 25%;
+    right: 5%;
+  }
+  
+  
+  label {
+    display: none;
+  }
+  
+  .cf {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3%;
+  }
+  
+  .rem {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .rem h6 {
+    margin-top: auto;
+  }
+  
+  button {
+    height: 40px;
+    width: 50%;
+    border: none;
+    border-radius: 8px;
+  }
+  
+  @media (max-width: 600px) {
+    .mcr {
+      height: 100vh;
+      width: 100vw;
+      border-radius: 0;
+      margin-top: 0;
+      padding: 10px;
+    }
+  
+    .bac {
+      display: none;
+    }
+  
+    .form {
+      height: 100%;
+      overflow-y: scroll;
+      padding: 10px 20px;
+    }
+  
+    .about{
+      padding: 0;
+      height: 130px;
+      overflow: hidden;
+    }
+  
+    .about .logo {
+      width: 150px;
+      height: 150px;
+      margin: 0 auto;
+    }
+  
+    .about .logo img {
+      height: 150px;
+      width: 150px;
+    }
+  
+    .form h5 {
+      text-align: center;
+    }
+  
+    .register {
+      text-align: center;
+    }
+  }
+  
+  .OTP{
+    min-width: 30vw;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .OTP input {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border: none;
+    border-bottom: 2px solid #d2d2d2;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    padding: 0;
+  }
+  
+  .OTP input:focus {
+    border-bottom: 2px solid deepskyblue;
+    outline: none;
+  }
+  
+  .hide {
+    display: none;
   }
 
-  .card {
-    max-width: 800px; /* You can adjust the value (in pixels) as per your requirement */
-    margin: 0 auto; /* This centers the card horizontally within the parent container */
-  }
-
-  .reversed-icon {
-    transform: scaleX(-1);
+  .emailinput{
+    width: 100%;
+    display: flex;
+    border-radius: 12px;
+    border: 2px black solid;
+    padding: 0 10px;
+    i{
+        margin: auto 0;
+    }
+    input{
+        border: none;
+        outline: none;
+        height: 40px;
+        width: 95%;
+    }
   }
